[package]
name = "rsopen"
version = "0.1.0"
edition = "2021"
authors = ["Petr Gadorek <hahihula@gmail.com>"]
description = "A multiplatform application launcher with fuzzy search capabilities."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Hahihula/rsopen"
keywords = ["launcher", "cli", "open", "search"]
categories = ["command-line-utilities", "os"]
readme = "README.md"

[lib]
name = "rsopen"
path = "src/lib.rs"

[[bin]]
name = "rsopen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
anyhow = "1.0"
dirs = "6.0.0"
strsim = "0.11.1"

[profile.release]
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size.
lto = true        # Enable Link Time Optimization (LTO).
codegen-units = 1 # Reduce parallel code generation units to increase optimization.
panic = "abort"   # Abort on panic (removes landing pads and dwarf info).
